<resources>
    <string name="app_name">DummyBudget</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="existing_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="login_header">Login</string>
    <string name="sign_up">Don\'t have an account yet?</string>
    <string name="login">Login</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="current_loc">Current Location</string>
    <string name="yearly_salary">Yearly Salary</string>
    <string name="address">Address</string>
    <string name="salary">Salary</string>
    <string name="set_your_bu">Set your budget priorities</string>
    <string name="housing">Housing</string>
    <string name="utilities">Utilities</string>
    <string name="travel">Travel</string>
    <string name="food">Food</string>
    <string name="submit">Submit</string>
    <string name="min">Min</string>
    <string name="max">Max</string>

</resources>